--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
     <title>Bootstrap Project</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark p-5 navbar-dark">
         <div class="container">
             <a href="#" class="navbar-brand">FE BootCamp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"><i class="navbar-toggler-icon"></i></button>
@@ -25,19 +27,77 @@
             </div>
         </div>
     </nav>
-
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
+        <!-- showcase -->
+    <section class="bg-dark text-light p-5 p-lg-0 text-center text-sm-start">
         <div class="container">
-            <div class="d-sm-flex">
+            <div class="d-sm-flex align-items-center justify-content-center">
                 <div>
                     <h1>Become a<span class="text-warning"> Jr. Frontend Dev </span>in 90 days!</h1>
-                    <p class="lead my-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum omnis sint aut ea quaerat mollitia repellat, odio, exercitationem, obcaecati corporis repudiandae amet veniam illo a similique tenetur doloremque. Necessitatibus, consequuntur!</p>
+                    <p class="lead my-5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum omnis sint aut ea quaerat mollitia repellat, odio, exercitationem, obcaecati corporis repudiandae amet veniam illo a similique tenetur doloremque. Necessitatibus, consequuntur!</p>
                     <button class="btn btn-primary btn-lg my-5">Start Now!</button>
                 </div>
-                <img src="./img/hero.svg" alt="#" class="img-fluid w-50 d-none d-sm-block">
+                <img src="./img/showcase.svg" alt="#" class="img-fluid d-none d-sm-block w-50">
             </div>
         </div>
     </section>
+    <!-- news letter -->
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex align-items-center justify-content-between">
+                <h3 class="mb-3 mb-md-0">Signup for our News Letter</h3>
+
+                <div class="input-group news-input">
+                    <input type="text" class="form-control" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
+                    <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Button</button>
+                  </div>
+            </div>
+        </div>        
+    </section>
+
+    <!-- Grid system -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-laptop"></i>
+                        </div>
+                        <h3 class="card-title mb-3">Virtual</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure animi deserunt quae, illo illum totam.</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-laptop"></i>
+                        </div>
+                        <h3 class="card-title mb-3">Virtual</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure animi deserunt quae, illo illum totam.</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-laptop"></i>
+                        </div>
+                        <h3 class="card-title mb-3">Virtual</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure animi deserunt quae, illo illum totam.</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                        </div>                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
