--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <div>
                     <h1>Become a<span class="text-warning"> Jr. Frontend Dev </span>in 90 days!</h1>
                     <p class="lead my-3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum omnis sint aut ea quaerat mollitia repellat, odio, exercitationem, obcaecati corporis repudiandae amet veniam illo a similique tenetur doloremque. Necessitatibus, consequuntur!</p>
-                    <button class="btn btn-primary btn-lg my-3">Start Now!</button>
+                    <button class="btn btn-primary btn-lg my-3"  data-bs-toggle="modal"
+                    data-bs-target="#enroll">Start Now!</button>
                 </div>
                 <img src="./img/showcase.svg" alt="#" class="img-fluid d-none d-sm-block w-50">
             </div>
@@ -184,8 +185,174 @@
     </div>
 </section>
 <!-- instructors -->
-<section class="p-5 bg-primary" id="instructors"></section>
+<section class="p-5 bg-primary" id="instructors">
+    <div class="container">
+        <h2 class="text-center text-white">Our Instructors</h2>
+    <p class="lead text-center text-white mb-5">All of our instructors have 5+ years working as a web developer in the industry</p>
 
+    <div class="row g-4">
+       <div class="col-md-6 col-lg-3">
+        <div class="card bg-light">
+            <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/women/90.jpg"  class="rounded-circle mb-3" alt="#">
+                <h3 class="card-title mb-3">Li Mei</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                </p>
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+                <div class="card-body text-center">
+                    <img src="https://randomuser.me/api/portraits/women/30.jpg"  class="rounded-circle mb-3" alt="#">
+                    <h3 class="card-title mb-3">Urbi</h3>
+                    <p class="card-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                    </p>
+                    <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                    <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                    <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-light">
+                    <div class="card-body text-center">
+                        <img src="https://randomuser.me/api/portraits/women/10.jpg"  class="rounded-circle mb-3" alt="#">
+                        <h3 class="card-title mb-3">Claire Monet</h3>
+                        <p class="card-text">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                          Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                        </p>
+                        <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                      </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/5.jpg"  class="rounded-circle mb-3" alt="#">
+                            <h3 class="card-title mb-3">Thomas B</h3>
+                            <p class="card-text">
+                              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                              Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                            </p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                          </div>
+                        </div>
+                    </div>
+       </div>              
+    </div>
+    
+</section>
+<!-- contacts & map -->
+
+<section class="p-5">
+    <div class="conainer">
+        <div class="row g-4">
+            <div class="col-md">
+                <h2 class="text-center mb-4">Contact Info</h2>
+                    <ul class="list-group list-group-flush lead">
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span>1st Memory Street SSD
+                        </li>
+                        <li class="list-group-item"><span class="fw-bold">Enrollment Support:</span>111-222-3333</li>
+                        <li class="list-group-item"><span class="fw-bold">Email:</span>support@febootcampdemo.com</li>
+                        <li class="list-group-item"><span class="fw-bold">Counselling:</span>333-222-1111</li>
+                    </ul>
+                
+            </div>
+        </div>
+
+        <div class="col-md">
+            <div id="map"></div>
+          </div>
+        </div>
+    </div>
+</section>
+<!-- Footer -->
+<footer class="p-5 bg-dark text-white text-center position-relative">
+    <div class="container">
+      <p class="lead">Copyright &copy; 2021 Frontend Bootcamp</p>
+
+      <a href="#" class="position-absolute bottom-0 end-0 p-5">
+        <i class="bi bi-arrow-up-circle h1"></i>
+      </a>
+    </div>
+  </footer>
+
+  <!-- Modal -->
+  <div
+    class="modal fade"
+    id="enroll"
+    tabindex="-1"
+    aria-labelledby="enrollLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="enrollLabel">Enrollment</h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <p class="lead">Fill out this form and we will get back to you</p>
+          <form>
+            <div class="mb-3">
+              <label for="first-name" class="col-form-label">
+                First Name:
+              </label>
+              <input type="text" class="form-control" id="first-name" />
+            </div>
+            <div class="mb-3">
+              <label for="last-name" class="col-form-label">Last Name:</label>
+              <input type="text" class="form-control" id="last-name" />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="col-form-label">Email:</label>
+              <input type="email" class="form-control" id="email" />
+            </div>
+            <div class="mb-3">
+              <label for="phone" class="col-form-label">Phone:</label>
+              <input type="tel" class="form-control" id="phone" />
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            Close
+          </button>
+          <button type="button" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
